chore: update package name and version in package.json; add permissions to release workflow

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,12 @@ on:
           - major
           - prerelease
 
+permissions:
+  contents: write
+  pull-requests: write
+  issues: write
+  actions: read
+
 jobs:
   release:
     runs-on: ubuntu-latest
