--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types.d.ts",
   "scripts": {
     "format": "prettier --write --parser typescript 'src/**/*.{ts,tsx}'",
     "lint": "eslint src --ext .ts,.tsx",
